--- a/asset/css/skeleton.css
+++ b/asset/css/skeleton.css
@@ -32,7 +32,8 @@
 
 /* Table of Contents
 ==================================================
-    #Base 1160 Grid    
+    #Base Setting
+		#Browser
     #Tablet (Portrait)
     #Mobile (Portrait) 
     #Mobile (Landscape)
@@ -40,10 +41,10 @@
     
     
 
-/* #Base 1160 Grid 
+/* #Base Setting
 ================================================== */
 
-    .container                                  { position: relative; width: 1160px; margin: 0 auto; padding: 0; }
+    .container                                  { position: relative; margin: 0 auto; padding: 0;}
     .column, .columns                           { float: left;display: inline; margin-left: 30px; margin-right: 30px;
                                                   -webkit-transition: all 0.2s ease-in;
                                                   -moz-transition: all 0.2s ease-in;
@@ -51,14 +52,19 @@
                                                   -ms-transition: all 0.2s ease-in;
                                                 }
     .row                                        { margin-bottom: 20px; }
-    
-    /* Base Grid */
-    .container .five.columns                    { width: 200px; }/*width: 280px;*/
-    .container .eleven.columns                  { width: 600px; }/*width: 640px;*/
-    .container .sixteen.columns                 { width: 1100px; }/*width: 940px;*/
-		
-    
-    
+
+
+
+/* #Browser
+================================================== */
+
+		.container                                  { width: 1160px; }/* #containerの横幅 */
+		.container .width_a.columns                 { width: 1100px; }/* #wrapの横幅 */
+    .container .width_b.columns                 { width:  600px; }/* #contentの横幅 */
+		.container .width_c.columns                 { width:  200px; }/* #sidebarの横幅 */
+
+
+ 
 /* #Tablet (Portrait)
 ================================================== */   
 
@@ -68,13 +74,13 @@
         .container                                  { width: 768px; }
         .container .column,
         .container .columns                         { margin-left: 20px; margin-right: 20px;  }
-
-        .container .five.columns                    { width: 200px; }
-        .container .eleven.columns                  { width: 508px; }
-        .container .sixteen.columns                 { width: 728px; }
+        
+        .container .width_a.columns                 { width: 728px; }/* #wrapの横幅 */
+				.container .width_b.columns                 { width: 508px; }/* #contentの横幅 */
+				.container .width_c.columns                 { width: 200px; }/* #sidebarの横幅 */
     }
-    
-    
+
+
 /*  #Mobile (Portrait) 
 ================================================== */
     
@@ -84,15 +90,13 @@
         .container { width: 300px; }
         .columns, .column { margin: 0; }
 				
-        .container .five.columns,
-        .container .eleven.columns,
-        .container .sixteen.columns  { width: 300px; }
+				.container .width_a.columns  { width: 280px; }/* #wrapの横幅 */
+        .container .width_b.columns  { width: 280px; }/* #contentの横幅 */
+				.container .width_c.columns  { width: 300px; }/* #sidebarの横幅 */
         
-        .container .eleven.columns  { width: 280px; }
-        .container .sixteen.columns { width: 280px; }
     }    
-    
-    
+
+
 /* #Mobile (Landscape)
 ================================================== */
 
@@ -102,14 +106,12 @@
         .container { width: 420px; }
         .columns, .column { margin: 0; }
 				
-        .container .five.columns,
-        .container .eleven.columns,
-        .container .sixteen.columns { width: 420px; }
-				
-        .container .eleven.columns { width: 400px; }
+				.container .width_a.columns { width: 420px; }/* #wrapの横幅 */
+        .container .width_b.columns { width: 400px; }/* #contentの横幅 */
+				.container .width_c.columns { width: 420px; }/* #sidebarの横幅 */
     }
-     
-    
+
+
 /* #Clearing
 ================================================== */
 
@@ -144,6 +146,7 @@
       width: 0;
       height: 0;
     }
-    
-    
-    
+
+
+
+
