--- a/asset/css/responsive.css
+++ b/asset/css/responsive.css
@@ -312,10 +312,10 @@
 		.company #content article table td {font-size: 0.8em;}
 		
 		/* お問い合わせ */
-		.inquiry #content form .form_style01    {display: inherit !important;}
-		.inquiry #content form .form_style01 dl {display: inherit !important; margin-bottom: 1em;}
-		.inquiry #content form .form_style01 dt,
-		.inquiry #content form .form_style01 dd {display: inherit !important;width: 100% !important; background-color: #FFF !important; padding: 0;}
+		.inquiry #content form    {display: inherit !important;}
+		.inquiry #content form dl {display: inherit !important; margin-bottom: 1em;}
+		.inquiry #content form dt,
+		.inquiry #content form dd {display: inherit !important;width: 100% !important; background-color: #FFF !important; padding: 0;}
 		
 	}
 	
@@ -392,9 +392,9 @@
 		.company #content article table td {font-size: 0.8em;}
 		
 		/* お問い合わせ */
-		.inquiry #content form .form_style01    {display: inherit !important;}
-		.inquiry #content form .form_style01 dl {display: inherit !important; margin-bottom: 1em;}
-		.inquiry #content form .form_style01 dt,
-		.inquiry #content form .form_style01 dd {display: inherit !important;width: 100% !important; background-color: #FFF !important; padding: 0;}
+		.inquiry #content form    {display: inherit !important;}
+		.inquiry #content form dl {display: inherit !important; margin-bottom: 1em;}
+		.inquiry #content form dt,
+		.inquiry #content form dd {display: inherit !important;width: 100% !important; background-color: #FFF !important; padding: 0;}
 		
 	}
