--- a/assets/templates/kanipunch/css/base.css
+++ b/assets/templates/kanipunch/css/base.css
@@ -402,27 +402,23 @@ footer p.status {
 #sidebar {
 	margin-right: 0;
 }
-#sidebar .widget-title {
-	display: none;
-}
-#sidebar .widget-container {
+#sidebar .sidemenu {
 	width: 200px;
-	margin-right: 20px;
-	margin-left: 0px;
+	margin: 0 20px 20px 0;
 }
-#sidebar .widget-container ul {
+#sidebar .sidemenu ul {
 	margin: 0;
 	padding-top: 0;
 	border-bottom: 1px solid #eee;
 }
-#sidebar .widget-container ul ul {
+#sidebar .sidemenu ul ul {
 	border-bottom: none;
 }
-#sidebar .widget-container ul li {
+#sidebar .sidemenu ul li {
 	margin: 0;
 	padding-top: 0;
 }
-#sidebar .widget-container li.menu_item a {
+#sidebar .sidemenu li a {
 	display: block;
 	background: url(../images/arrow.png) no-repeat 10px 12px;
 	line-height: 120%;
@@ -431,23 +427,23 @@ footer p.status {
 	border-top: 1px solid #eee;
 	text-decoration: none;
 }
-#sidebar .widget-container li.menu_item a:hover {
+#sidebar .sidemenu li a:hover {
 	background: #73C71F url(../images/arrow_on.png) no-repeat 10px 12px;
 	color: #FFF;
 }
-#sidebar .widget-container li.menu_item ul {
+#sidebar .sidemenu li ul {
 	display: none;
 	margin-left: 0;
 	margin-bottom: 0;
 }
-#sidebar .widget-container li.menu_item li a,
-#sidebar .widget-container li.menu_item li a:hover {
+#sidebar .sidemenu li li a,
+#sidebar .sidemenu li li a:hover {
 	background: none;
 	font-weight: normal;
 	border-top: none;
 	color: #666;
 }
-#sidebar .widget-container li.menu_item li a:hover {
+#sidebar .sidemenu li li a:hover {
 	background-color: #f0f0f0;
 }
 
@@ -676,7 +672,7 @@ nav ul li a {
 }
 /* Navbar Hover Links */
 
-nav ul li.current a, nav ul li a:hover {
+nav ul li.active a, nav ul li a:hover {
 	color: #FFF;
 	/*background: #f1f1f1;*/
 	background: -moz-linear-gradient(270deg, #8AD042, #539619) repeat scroll 0 0 transparent;
@@ -689,15 +685,9 @@ nav ul li:hover li a {
 	color: #595959;
 	font-weight: normal;
 }
-/* Navbar Active Links */
-nav ul li.active a {
-	color: #333;
-	background: #FFF;
-	text-shadow: 1px 1px 0px #FFF;
-	border-bottom: 1px solid #FFF;
-}
+
 /* Nav Sublevel */
-nav ul.children {
+nav ul ul {
 	background: -moz-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
 	background: -webkit-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
 	background: -o-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
@@ -718,11 +708,11 @@ nav ul.children {
 }
 
 /* Nav Sublevel Links */
-nav ul.children li {
+nav ul ul li {
 	border: none;
 	border-bottom: 1px solid #fafafa;
 }
-nav ul.children li a {
+nav ul ul li a {
 	background: #f0f0f0 !important;
 	padding: 5px 0px 5px 8px;
 	height: 32px;
@@ -736,7 +726,7 @@ nav ul.children li a {
 	/*behavior: none;*/
 }
 /* Nav Sublevel Hover */
-nav ul.children li a:hover {
+nav ul ul li a:hover {
 	background: #FFF !important;
 }
 /* @end */
