--- a/assets/templates/kanipunch/css/custom.css
+++ b/assets/templates/kanipunch/css/custom.css
@@ -95,6 +95,7 @@ header ul li a .icon_label div {
 	background-image: -webkit-linear-gradient(#FFFFFF, #E3E3E3);
 	background-image: -moz-linear-gradient(#FFFFFF, #E3E3E3);
 	background-image: -o-linear-gradient(#FFFFFF, #E3E3E3);
+	background-image: -ms-linear-gradient(#FFFFFF, #E3E3E3);
 	background-image: linear-gradient(#FFFFFF, #E3E3E3);
 	-pie-background: linear-gradient(#FFFFFF, #e3e3e3);
 	color: #333;
@@ -117,6 +118,7 @@ footer #site_info {
 	background: -moz-linear-gradient(270deg, #F0F0F0, #DDD) repeat scroll 0 0 transparent;
 	background: -webkit-linear-gradient(270deg, #F0F0F0, #DDD) repeat scroll 0 0 transparent;
 	background: -o-linear-gradient(270deg, #F0F0F0, #DDD) repeat scroll 0 0 transparent;
+	background: -ms-linear-gradient(270deg, #F0F0F0, #DDD) repeat scroll 0 0 transparent;
 	-pie-background: linear-gradient(#F0F0F0, #DDD);
 }
 footer #site_info dl dd a {
@@ -188,6 +190,7 @@ nav ul {
 	background: -moz-linear-gradient(270deg, #519300, #236400) repeat scroll 0 0 transparent;
 	background: -webkit-linear-gradient(270deg, #519300, #236400) repeat scroll 0 0 transparent;
 	background: -o-linear-gradient(270deg, #519300, #236400) repeat scroll 0 0 transparent;
+	background: -ms-linear-gradient(270deg, #519300, #236400) repeat scroll 0 0 transparent;
 	-pie-background: linear-gradient(#519300, #236400);
 	border-color: #236400 #236400 #236400 #236400;
 }
@@ -198,6 +201,7 @@ nav ul li a {
 	background: -moz-linear-gradient(270deg, #519300, #236400) repeat scroll 0 0 transparent;
 	background: -webkit-linear-gradient(270deg, #519300, #236400) repeat scroll 0 0 transparent;
 	background: -o-linear-gradient(270deg, #519300, #236400) repeat scroll 0 0 transparent;
+	background: -ms-linear-gradient(270deg, #519300, #236400) repeat scroll 0 0 transparent;
 	-pie-background: linear-gradient(#519300, #236400);
 	color: #FFF !important;
 }
@@ -207,6 +211,7 @@ nav ul li.active a, nav ul li a:hover {
 	background: -moz-linear-gradient(270deg, #8AD042, #539619) repeat scroll 0 0 transparent;
 	background: -webkit-linear-gradient(270deg, #8AD042, #539619) repeat scroll 0 0 transparent;
 	background: -o-linear-gradient(270deg, #8AD042, #539619) repeat scroll 0 0 transparent;
+	background: -ms-linear-gradient(270deg, #8AD042, #539619) repeat scroll 0 0 transparent;
 	-pie-background: linear-gradient(#8AD042, #539619);
   color: #FFF;
 }
@@ -220,6 +225,7 @@ nav ul ul {
 	background: -moz-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
 	background: -webkit-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
 	background: -o-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
+	background: -ms-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
 	-pie-background: linear-gradient(#FCFCFC, #ECECEC);
 	border-color: #EAEAEA #F5F5F5 #F5F5F5 #F5F5F5;
 }
@@ -270,6 +276,7 @@ article .news li a:hover strong {
 	background: -moz-linear-gradient(270deg, #8AD042, #539619) repeat scroll 0 0 transparent;
 	background: -webkit-linear-gradient(270deg, #8AD042, #539619) repeat scroll 0 0 transparent;
 	background: -o-linear-gradient(270deg, #8AD042, #539619) repeat scroll 0 0 transparent;
+	background: -ms-linear-gradient(270deg, #8AD042, #539619) repeat scroll 0 0 transparent;
 	-pie-background: linear-gradient(#8AD042, #539619);
 }
 .inquiry_banner li a {
@@ -292,6 +299,7 @@ article .news li a:hover strong {
 	background-image: -webkit-linear-gradient(white, #E3E3E3);
 	background-image: -moz-linear-gradient(white, #E3E3E3);
 	background-image: -o-linear-gradient(white, #E3E3E3);
+	background-image: -ms-linear-gradient(white, #E3E3E3);
 	background-image: linear-gradient(white, #E3E3E3);
 	-pie-background: linear-gradient(#FFFFFF, #e3e3e3);
 	border: 1px solid #DBDBDB;
@@ -335,6 +343,7 @@ h2 {
 	background: -moz-linear-gradient(270deg, #519300, #236400) repeat scroll 0 0 transparent;
 	background: -webkit-linear-gradient(270deg, #519300, #236400) repeat scroll 0 0 transparent;
 	background: -o-linear-gradient(270deg, #519300, #236400) repeat scroll 0 0 transparent;
+	background: -ms-linear-gradient(270deg, #519300, #236400) repeat scroll 0 0 transparent;
 	-pie-background: linear-gradient(#519300, #236400);
 	border-color: #EAEAEA #EAEAEA whiteSmoke #CCC;
 }
@@ -342,6 +351,7 @@ h2 span {
 	background: -moz-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
 	background: -webkit-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
 	background: -o-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
+	background: -ms-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
 	-pie-background: linear-gradient(#FCFCFC, #ECECEC);
 }
 
@@ -439,6 +449,7 @@ a.button {
 	background-image: -webkit-linear-gradient(#597db1, #3a6198);
 	background-image: -moz-linear-gradient(#597db1, #3a6198);
 	background-image: -o-linear-gradient(#597db1, #3a6198);
+	background-image: -ms-linear-gradient(#597db1, #3a6198);
 	-pie-background: linear-gradient(#597db1, #3a6198);
 	border: 1px solid #3b639b;
 	color: white;
@@ -449,6 +460,7 @@ a.button:hover {
 	background-image: -webkit-linear-gradient(#365a8c, #51719e);
 	background-image: -moz-linear-gradient(#365a8c, #51719e);
 	background-image: -o-linear-gradient(#365a8c, #51719e);
+	background-image: -ms-linear-gradient(#365a8c, #51719e);
 	-pie-background: linear-gradient(#365a8c, #51719e);
 	-moz-box-shadow: inset 0 1px 0 0 #728cb1;
 	-webkit-box-shadow: inset 0 1px 0 0 #728cb1;
@@ -459,6 +471,7 @@ a.button:active {
 	-moz-box-shadow: inset 0 0 8px 4px #335380, inset 0 0 8px 4px #335380, 0 1px 1px 0 #eeeeee;
 	-webkit-box-shadow: inset 0 0 8px 4px #335380, inset 0 0 8px 4px #335380, 0 1px 1px 0 #eeeeee;
 	-o-box-shadow: inset 0 0 8px 4px #335380, inset 0 0 8px 4px #335380, 0 1px 1px 0 #eeeeee;
+	-ms-box-shadow: inset 0 0 8px 4px #335380, inset 0 0 8px 4px #335380, 0 1px 1px 0 #eeeeee;
 	box-shadow: inset 0 0 8px 4px #335380, inset 0 0 8px 4px #335380, 0 1px 1px 0 #eeeeee;
 	border: 1px solid #355a8d;
 }
@@ -474,6 +487,7 @@ a.button.lightgreen {
 	background-image: -webkit-linear-gradient(#80bf4f, #63a72f);
 	background-image: -moz-linear-gradient(#80bf4f, #63a72f);
 	background-image: -o-linear-gradient(#80bf4f, #63a72f);
+	background-image: -ms-linear-gradient(#80bf4f, #63a72f);
 	-pie-background: linear-gradient(#80bf4f, #63a72f);
 	border: 1px solid #65ab30;
 }
@@ -482,12 +496,14 @@ a.button.lightgreen:hover {
 	background-image: -webkit-linear-gradient(#5c9a2d, #73af46);
 	background-image: -moz-linear-gradient(#5c9a2d, #73af46);
 	background-image: -o-linear-gradient(#5c9a2d, #73af46);
+	background-image: -ms-linear-gradient(#5c9a2d, #73af46);
 	-pie-background: linear-gradient(#5c9a2d, #73af46);
 }
 a.button.lightgreen:active {
 	-moz-box-shadow: inset 0 0 8px 4px #558d2a, inset 0 0 8px 4px #558d2a, 0 1px 1px 0 #eeeeee;
 	-webkit-box-shadow: inset 0 0 8px 4px #558d2a, inset 0 0 8px 4px #558d2a, 0 1px 1px 0 #eeeeee;
 	-o-box-shadow: inset 0 0 8px 4px #558d2a, inset 0 0 8px 4px #558d2a, 0 1px 1px 0 #eeeeee;
+	-ms-box-shadow: inset 0 0 8px 4px #558d2a, inset 0 0 8px 4px #558d2a, 0 1px 1px 0 #eeeeee;
 	box-shadow: inset 0 0 8px 4px #558d2a, inset 0 0 8px 4px #558d2a, 0 1px 1px 0 #eeeeee;
 	border: 1px solid #5c9b2c;
 }
