--- a/assets/templates/kanipunch/css/base.css
+++ b/assets/templates/kanipunch/css/base.css
@@ -380,7 +380,7 @@ footer p.status {
 	text-decoration: none;
 }
 #sidebar .sidemenu li a:hover,
-#sidebar .sidemenu li.active a {
+#sidebar .sidemenu li.active > a {
 	background: #73C71F url(../images/arrow_on.png) no-repeat 10px 12px;
 	color: #FFF;
 }
