--- a/assets/templates/kanipunch/css/custom.css
+++ b/assets/templates/kanipunch/css/custom.css
@@ -142,7 +142,7 @@ footer #copyright #footer_menu li {
 	background: url(../images/arrow.png) no-repeat 10px 12px;
 }
 #sidebar .sidemenu li a:hover,
-#sidebar .sidemenu li.active a {
+#sidebar .sidemenu li.active > a {
 	background: #73C71F url(../images/arrow_on.png) no-repeat 10px 12px;
 	color: #FFF;
 }
